--- a/DiamondProblem/DiamondProblem.csproj
+++ b/DiamondProblem/DiamondProblem.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Diamond.cs" />
+    <Compile Include="IDiamond.cs" />
     <Compile Include="ShowDiamond.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
